--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,22 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.AnimatonClass.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\AnimatonClass.jar
+file.reference.colorpicker.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\colorpicker.jar
+file.reference.commons-beanutils-1.8.2.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\commons-digester-2.1.jar
+file.reference.commons-lang-2.6.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\groovy-all-2.0.1.jar
+file.reference.hsqldb.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\hsqldb.jar
+file.reference.iText-2.1.7.js2.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\iText-2.1.7.js2.jar
+file.reference.jackcess-2.1.6.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\jackcess-2.1.6.jar
+file.reference.jasperreports-5.6.0.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\jasperreports-5.6.0.jar
+file.reference.jcalendar-1.4.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\jcalendar-1.4.jar
+file.reference.poi-3.7-20101029.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\poi-3.7-20101029.jar
+file.reference.ucanaccess-4.0.2.jar=D:\\Documents\\NetBeansProjects\\NEWS\\SGM\\lib\\ucanaccess-4.0.2.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\AYU7-WN\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
